Corrections in name and changeOrder function

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Schul Physic App</string>
+    <string name="app_name">Schul Physik App</string>
     <string name="Beenden">Beenden</string>
     <string name="Weiter">Weiter</string>
     <string name="action_settings">Einstellungen</string>
@@ -10,7 +10,7 @@
     <string name="hello">Beschreibung des Programmes</string>
     <string name="hello_world">Hallo Welt</string>
     <string name="zuruck">Zum Anfang</string>
-    <string name="title_activity_test_aufgabe">Schul Physic App</string>
+    <string name="title_activity_test_aufgabe">Schul Physik App</string>
     <string name="title_activity_statistic">Statistik</string>
     <string name="Neu">Neu</string>
     <string name="Beschreibung">Ablauf des lernprogramms wird in folgenden Schritten detailliert erklärt</string>
@@ -23,6 +23,7 @@
     <string name="Anleitung6">Abgleich mit der Muster Lösung</string>
     <string name="Anleitung7">Richtigkeit: Prozent der Übereinstimmung mit der Muster-Lösung</string>
     <string name="Anleitung8">Statistik: Erhaltene Ergebnisse werden in Form einer Tabelle (Zeit, Anzahl der Hilfenutzung, Note bei der Selbstbeurteilung) ausgegeben</string>
+    <string name="Anleitung9">Mit dem Neu Button kannst du von vorn beginnen, dabei werden die Aufgaben in den Tests neu gemischt somit bekommst du andere Aufgaben als zuvor.</string>
     <string name="Einschätzung">Meine persönliche Einschätzung: Während der Lösung dieser Aufgabe habe ich mich:</string>
     <string name="Einschätzung1">voll unsicher</string>
     <string name="Einschätzung2">unsicher</string>
